# bio-inspired-control

./: .gitignore  final_project_data.csv  requirements.txt  robot_data.csv  shell.nix  trained_model.pth
Exercises34752_week2/: report.md
Exercises34752_week2/2.1/: exercise1.py
additions/exercise_camera_tools/: setup.py
additions/fable_2_api/: README.txt  exampleJointPos.py  exampleJointSpeed.py  exampleJointTorque.py  requirements.txt  simple_pid_8.py
exercises/: pyproject.toml  trained_model.pth
exercises/exercises_week1/: robot_data.csv
exercises/exercises_week1/1.3/: TODO_test_model.py  TODO_train_pytorch.py
exercises/exercises_week1/1.4/: TODO_1.4_1.py
exercises/exercises_week2/: report.md
exercises/exercises_week2/2.4/: exercise4.py
exercises_week1/: report.md
exercises_week1/1.1/: TODO_perceptron.py
exercises_week1/1.2/: TODO_mlp.py  TODO_perceptron.py
exercises_week1/1.3/: TODO_collect_training_data.py  TODO_train_pytorch.py
exercises_week1/1.4/: TODO_1.4_1.py
exercises_week2/: report.md
exercises_week2/2.3/: exercise3.py
exercises_week2/2.5/: exercise5.ipynb
exercises_week2/2.6/: exercise6.py
exercises_week2/2.7/: exercise7.py
final_project/: cam.py  collect_testdata.py  test.py  train.py
final_project/version1/: collect_testdata.py  test.py  (+1 more)
final_project/version2/: cam_callibration  cam_callibration.py  cam_get_callibration_data.py  cmac.py  cmac_xyz.py  detect_ball  detect_ball.py  fable.py  fable.urdf  inv_kin_test.py  main.py  pyproject.toml
final_project/version2/adaptive_filter/: cerebellum.py
final_project/version2/weights/: cmac_weights.npy  lucas_weights.npy  lucas_weights_0.1.npy  lucas_weights_0_1.npy  lucas_weights_0_2.npy  lucas_weights_0_5.npy  lucas_weights_no_division.npy  lucas_wf0.1_nrf10_lim100.npy  lucas_wf0.2_nrf10_lim100.npy  lucas_wf0.2_nrf3_lim100.npy  lucas_wf0.3_nrf10_lim100.npy  lucas_wf0.5_nrf10_lim100.npy  lucas_wf0.5_nrf3_lim100.npy  test_weights.npy
notebooks/: calibrate_camera.ipynb  camera_example.ipynb  fable_example.ipynb
(+14 files in other folders)
