[project]
name = "version2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "numpy<2.0",
    "roboticstoolbox-python==1.0.3",
    "scipy<1.9.0",
    "fableapi",
    "psutil",
    "serial",
    "pyserial",
    "matplotlib==3.7.3",
    "opencv-python",
    "ikpy",
    "pinocchio",
    "jupyter",
]

[tool.uv.sources]
fableapi = {path = "../../additions/fable_2_api"}
